--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     image: "mongo"
 
     # the port that we want to publish for mongodb
-    ports:
-      - "27017:27017"
+    # ports:
+    #   - "27017:27017"
 
     # our mongodb depends on volume to keep the data alive.
     volumes:
@@ -33,8 +33,8 @@ services:
     # it looks in this folder to find Dockerfile to build an image
     build: ./server
     # the port that we want to publish for backend
-    ports:
-      - "8080:8080"
+    # ports:
+    #   - "8080:8080"
 
     # volumes:
     #   - /server:/server
